--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*************
 
-GENERAL
+GENERAL & NAVIGATION
 
 ************/
 
@@ -8,10 +8,13 @@ GENERAL
     text-align: center;
 }
 
-.spacing {
-    margin-top: 300px;
+.menuItem {
+    font-weight: bold;
 }
 
+.menuItem:hover {
+    text-decoration: underline;
+}
 
 /*end*/
 
@@ -23,28 +26,8 @@ CONTENT
 
 */
 
-#name {
-    font-family: 'League Gothic', sans-serif;
-}
-
-nav ul li {
-    text-align: center;
-    list-style: none;
-    text-decoration: none;
-}
-
-#projectslink {
-    text-decoration: none;
-    color: black;
-    font-size: 1.35em;
-}
-
-#projectslink:hover {
-    text-decoration: underline;
-}
-
-h1 {
-    font-size: 4.6em;
+#navbarNav ul li a {
+    padding: 0 50px 0 0;
 }
 
 /*end*/
