--- a/style.css
+++ b/style.css
@@ -16,6 +16,16 @@ GENERAL & NAVIGATION
     text-decoration: underline;
 }
 
+header.container-fluid  {
+    padding-left: 0;
+}
+
+header img {
+    width: 250%;
+    height: 100px;
+}
+
+
 /*end*/
 
 
@@ -29,6 +39,38 @@ CONTENT
 #navbarNav ul li a {
     padding: 0 50px 0 0;
 }
+
+main {
+    color: black;
+    font-size: 20px;
+    background-color: #867f8a;
+}
+
+#mainSiteHeader {
+    margin-top: 10%;
+    text-align: center;
+    margin-bottom: 5%;
+}
+
+
+/************
+
+FOOTER
+
+*************/
+
+
+footer {
+    background-color: #c7753e;
+    text-align: center;
+}
+
+footer h4 {
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-decoration: underline;
+}
+
 
 /*end*/
 
