--- a/style.css
+++ b/style.css
@@ -17,11 +17,12 @@ GENERAL & NAVIGATION
 }
 
 header.container-fluid  {
-    padding-left: 0;
+    padding: 0;
+
 }
 
 header img {
-    width: 250%;
+    width: 100%;
     height: 100px;
 }
 
