--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ GENERAL & NAVIGATION
 
 ************/
 
-.text-center {
-    text-align: center;
-}
+
 
 .menuItem {
     font-weight: bold;
@@ -16,7 +14,7 @@ GENERAL & NAVIGATION
     text-decoration: underline;
 }
 
-header.container-fluid  {
+header.container  {
     padding: 0;
 
 }
@@ -51,18 +49,31 @@ CONTENT
 
 main {
     color: black;
-    font-size: 20px;
+    font-size: 1em;
     background-color: #867f8a;
 }
 
 #mainSiteHeader {
-    margin-top: 10%;
+    margin: 5% 0 5% 0;
+    padding: 1% 0 1% 0;
     text-align: center;
-    margin-bottom: 5%;
 }
 
 .col-md-3 ul li {
     list-style: none;
+}
+
+#hoursAndLocation ul li {
+    padding: 1.5% 0 1.5% 0;
+    list-style: none;
+}
+
+#hoursAndLocation ul h4 {
+    text-decoration: underline;
+}
+
+header.container, main.container, footer.container {
+    max-width: 100%;
 }
 
 
