--- a/style.css
+++ b/style.css
@@ -4,8 +4,16 @@ GENERAL & NAVIGATION
 
 ************/
 
-html {
-    max-width: 100%;
+html, body {
+   min-width: 100%;
+   margin: 0;
+   height: 100%;
+   background-color: #867f8a;
+}
+
+main {
+    position: absolute;
+    min-height: 75%;
 }
 
 .menuItem {
@@ -16,9 +24,8 @@ html {
     text-decoration: underline;
 }
 
-header.container  {
+header.container, #mainContainer.container {
     padding: 0;
-
 }
 
 header img {
@@ -28,10 +35,6 @@ header img {
 
 .min-vh {
     min-height: 35vh;
-}
-
-.row {
-    margin-top: 20px;
 }
 
 
@@ -56,7 +59,7 @@ main {
 }
 
 #mainSiteHeader {
-    margin: 5% 0 5% 0;
+    margin: 2% 0 2% 0;
     padding: 1% 0 1% 0;
     text-align: center;
 }
@@ -83,7 +86,7 @@ main {
     text-decoration: underline;
 }
 
-header.container, main.container, footer.container {
+#mainContainer.container, header.container, main.container, footer.container {
     max-width: 100%;
 }
 
@@ -132,8 +135,6 @@ footer {
 }
 
 footer h4 {
-    padding-top: 2%;
-    padding-bottom: 2%;
     text-decoration: underline;
 }
 
