--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ div.container.center-block {
 #hoursAndLocation {
     padding-left: 0;
     padding-right: 0;
+    margin-bottom: 10%;
 }
 
 #hoursAndLocation ul {
