--- a/style.css
+++ b/style.css
@@ -166,13 +166,27 @@ FOOTER
 footer {
     background-color: #F13232;
     text-align: center;
+    color: black;
+    text-decoration: none;
 }
 
-footer h4 {
+footer h2 {
     text-decoration: underline;
 }
 
 footer hr {
+    color: black;
+}
+
+footer #hoursFooter ul {
+    list-style: none;
+}
+
+#socialMediaFooter a {
+    text-decoration: none;
+}
+
+#socialMediaFooter h4 {
     color: black;
 }
 
