--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ GENERAL & NAVIGATION
 
 html, body {
    margin: 0;
-   height: 150%;
+   height: 100%;
    background-image: url("img/scrappipe.jpg");
-   background-repeat: no-repeat;
+   background-repeat: repeat-y;
    background-size: cover;
    background-position: center;
    font-family: 'League Gothic', sans-serif;
@@ -132,6 +132,11 @@ LOCATION
 
 ************/
 
+#ourLocation {
+    color: white;
+    text-decoration: underline;
+}
+
 .map-responsive {
     overflow: hidden;
     padding-bottom: 56.25%;
@@ -152,11 +157,45 @@ LOCATION
 }
 
 
+
+/************
+
+IMAGES
+
+*************/
+
+
+#images img {
+    border: 4px solid black;
+} 
+
+#images div.col-md-4 {
+    padding: 0;
+}
+
+/*********** 
+
+ABOUT
+
+***********/
+
+
+
+#about {
+    color: white;
+}
+
+
+
 /************
 
 SERVICES
 
 ************/
+
+#services {
+    color: white;
+}
 
 
 #services ul li {
@@ -176,7 +215,6 @@ FAQ
 
 #faq {
     color: white;
-    font-size: 150%;
 }
 
 
@@ -190,7 +228,7 @@ FOOTER
 footer {
     background-color: #F13232;
     text-align: center;
-    color: white;
+    color: black;
     text-decoration: none;
 }
 
@@ -199,7 +237,7 @@ footer h2 {
 }
 
 footer hr {
-    color: white;
+    color: black;
 }
 
 footer #hoursFooter ul {
@@ -211,7 +249,7 @@ footer #hoursFooter ul {
 }
 
 #socialMediaFooter h4 {
-    color: white;
+    color: black;
 }
 
 
