--- a/style.css
+++ b/style.css
@@ -7,10 +7,7 @@ GENERAL & NAVIGATION
 html, body {
    margin: 0;
    height: 100%;
-   background-image: url("img/scrappipe.jpg");
-   background-repeat: repeat-y;
-   background-size: cover;
-   background-position: center;
+   background-color: #514D4C;
    font-family: 'League Gothic', sans-serif;
 }
 
@@ -167,6 +164,8 @@ IMAGES
 
 #images img {
     border: 4px solid black;
+    width: 350px;
+    height: 275px;
 } 
 
 #images div.col-md-4 {
